header-area added

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,81 @@ body{
     width: 80%;
     margin: 0 auto;
 }
+
+/* header area css */
+
+.header-area{
+    background-color: rgba(255, 144, 14, 0.1);;
+}
+
+.header-top{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 50px;
+    align-items: center;
+}
+
+.header-top .logo h3{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 50px;
+    color: #131313;
+}
+
+.menu-section ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+.menu-section li{
+    margin-left: 20px;
+    list-style: none;
+}
+
+.menu-section a{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px;
+    color: #424242;
+    padding: 5px;
+}
+
+.header-banner{
+   margin-top: 100px;
+}
+
+.banner-content{
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-content h2{
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 75px;
+    color:#131313;
+}
+
+.banner-content p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 30px 0;
+}
+
+.banner-content a{
+    text-decoration: none;
+    background-color: #FF900E;
+    font-size: 20px;
+    font-weight: 600;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+.banner-img{
+    margin-top: 50px;
+}
+.banner-img img{
+    width: 100%;
+}
