--- a/styles/style.css
+++ b/styles/style.css
@@ -18,16 +18,27 @@ body{
     margin: 0 auto;
 }
 
+.btn{
+    text-decoration: none;
+    background-color: #FF900E;
+    font-size: 20px;
+    font-weight: 600;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+
 /* header area css */
 
 .header-area{
     background-color: rgba(255, 144, 14, 0.1);;
+    padding: 20px;
 }
 
 .header-top{
     display: flex;
     justify-content: space-between;
-    padding-top: 50px;
+    padding-top: 30px;
     align-items: center;
 }
 
@@ -80,18 +91,148 @@ body{
     margin: 30px 0;
 }
 
-.banner-content a{
-    text-decoration: none;
-    background-color: #FF900E;
-    font-size: 20px;
-    font-weight: 600;
-    color: #ffffff;
-    padding: 10px 20px;
-    border-radius: 8px;
-}
+
 .banner-img{
     margin-top: 50px;
 }
 .banner-img img{
     width: 100%;
 }
+
+/* our-features */
+.our-features-area{
+    margin-top: 100px;
+}
+.our-features{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.features-img{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+}
+.features-img img{
+    width: 100%;
+}
+.feature-content{
+    margin-left: 50px;
+}
+.feature-content h2{
+    font-size: 45px;
+    font-weight: 500;
+    color: #727272;
+    line-height: 52px;
+}
+.feature-content h2 span{
+    color: #131313;
+    font-weight: 700;
+}.feature-content .feature-mark{
+    color: #FF900E;
+}
+
+.feature-content p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #727272;
+    margin: 10px 0 30px;
+}
+/* populer-feature-area */
+.populer-feature-area{
+    margin-top: 100px;
+}
+.popular-features{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+
+.feature-intro h3{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 52px;
+    color: #131313;
+    padding-left: 20px;
+    position: relative;
+}
+
+.feature-intro h3::before{
+    position: absolute;
+    content: "";
+    width: 5px;
+    height: 100px;
+    background-color: #FF900E;
+    top: 0;
+    left: 0;
+}
+
+.feature-intro p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin: 20px 0;
+}
+
+.top-features{
+   display: flex;
+   flex-direction: column;
+   gap: 30px;
+   justify-content: space-around;
+   margin-top: 10px;
+}
+
+.single-features{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.single-features h4{
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    margin-bottom: 10px;
+    color: #131313;
+}
+
+.single-features p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #727272;
+}
+
+.popular-feature-img img{
+    width: 100%;
+}
+
+.popular-feature-img button{
+    background-color: #FF900E;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 65px;
+    font-weight: 700;
+    line-height: 70px;
+    padding: 35px 25px;
+    text-align: center;
+    border: 0;
+    border-radius: 10px;
+    margin: -90px 0 0 -50px;
+}
+
+.popular-feature-img button span{
+    font-size: 25px;
+    display: block;
+    line-height: 40px;
+    font-weight: 500px;
+}
+
+
+
