--- a/styles/style.css
+++ b/styles/style.css
@@ -184,7 +184,7 @@ body{
 .top-features{
    display: flex;
    flex-direction: column;
-   gap: 30px;
+   gap: 20px;
    justify-content: space-around;
    margin-top: 10px;
 }
@@ -192,13 +192,16 @@ body{
 .single-features{
     width: 90%;
     margin: 0 auto;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.16);
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #ffffff;
 }
 
 .single-features h4{
     font-size: 20px;
     font-weight: 600;
     line-height: 24px;
-    margin-bottom: 10px;
     color: #131313;
 }
 
@@ -226,7 +229,7 @@ body{
     border: 0;
     border-radius: 10px;
     position: relative;
-    right: 80px;
+    right: 50px;
     bottom: 80px;
     /* margin: -90px 0 0 -50px; */
 }
@@ -327,6 +330,113 @@ body{
 
 .our-sponspors img{
     filter: grayscale(1);
+}
+
+/* contact-area */
+
+.contact-area{
+    margin-top: 100px;
+    text-align: center;
+}
+
+.contact-area h3{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 52px;
+    color: #131313;
+}
+
+.contact-area p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #727272;
+    width: 50%;
+    margin: 25px auto;
+}
+
+.contact-option{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    gap: 50px;
+}
+
+.contact-address{
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    gap: 20px;
+}
+
+.address{
+    display: flex;
+    align-items: center;
+}
+
+.address i{
+    background-color: #FF900E;
+    width: 80px;
+    height: 60px;
+    line-height: 60px;
+    color: #fff;
+    font-size: 25px;
+    border-radius: 5px;
+}
+
+.address p{
+  margin-left: 20px;
+  font-size: 16px;
+  line-height: 26px;
+  width: 100%;
+  text-align: left;
+}
+
+.address span{
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+    
+}
+
+
+.message input,textarea{
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+.message input[type="submit"]{
+    background-color: #FF900E;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px;
+    cursor: pointer;
+}
+
+/* Footer Area CSS */
+.footer-area{
+    margin-top: 100px;
+}
+
+.footer-text{
+    width: 100%;
+    background-color: #FFF4E7;
+   
+}
+
+.footer-text p{
+    margin: 0 auto;
+    padding: 30px 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #424242;
 }
 
 
