--- a/styles/style.css
+++ b/styles/style.css
@@ -231,7 +231,6 @@ body{
     position: relative;
     right: 50px;
     bottom: 80px;
-    /* margin: -90px 0 0 -50px; */
 }
 
 .popular-feature-img button span{
@@ -437,6 +436,196 @@ body{
     font-weight: 400;
     line-height: 24px;
     color: #424242;
+}
+
+
+
+/* Responsive for Mobile */
+
+@media only screen and (max-width:576px) {
+    .container{
+        width: 95%;
+    }
+    /* Header-area CSS */
+    .header-top{
+        flex-direction: column;
+    }
+
+    .header-top .logo h3{
+        font-size: 35px;
+    }
+
+    .menu-section ul{
+        flex-direction: column;
+        margin-top: 20px;
+        gap: 10px;
+        text-align: center;
+    }
+
+    .banner-content{
+        width: 100%;
+        margin: 0 auto;
+    }
+    
+    .banner-content h2{
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 50px;
+    }
+    
+    
+
+    /* Feature area */
+    .our-features{
+        grid-template-columns: repeat(1,1fr);
+        padding: 0 5px;
+    }
+    
+    .features-img{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px;
+    }
+
+    .feature-content{
+        margin-left: 0;
+        text-align: center;
+    }
+    .feature-content h2{
+        font-size: 35px;
+        line-height: 42px;
+    }
+    .feature-content h2 span{
+        font-weight: 600;
+    }
+    
+    .feature-content p{
+        line-height: 22px;
+    }
+
+    /* popular feature */
+    .popular-features{
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+    }
+    
+    .feature-intro h3{
+        font-size: 35px;
+        font-weight: 600;
+        line-height: 42px;
+    }
+
+    .feature-intro h3::before{
+        height: 100%;
+    }
+    .single-features{
+        width:100%;
+    }
+    
+    .popular-feature-img img{
+        width: 100%;
+       border: 1px solid #ddd;
+    }
+    
+    .popular-feature-img button{
+        font-size: 45px;
+        font-weight: 600;
+        line-height: 50px;
+        padding: 25px 15px;
+        position: inherit;
+        margin-top: -50px;
+}
+
+/* Our Achivement */
+.achivement-area{
+    text-align: center;
+}
+.achivement-area h3{
+    font-size: 35px;
+    font-weight: 600;
+    line-height: 42px;
+}
+
+.achivement-area p{
+    line-height: 22px;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.our-achivements{
+    flex-direction: column;
+    gap: 30px;
+}
+
+.single-achivement{
+    width: 90%;
+    padding: 20px 5px;
+    margin: 0 auto;
+}
+
+.single-achivement:hover{
+    transform: rotate(360deg) scale(1.1);
+}
+
+
+/* Our Sponspors area CSS */
+
+
+.our-sponspors-area h3{
+    font-size: 35px;
+    font-weight: 600;
+    line-height: 42px;
+}
+
+.our-sponspors-area p{
+    width: 100%;
+    margin-top: 0;
+}
+
+.our-sponspors{
+   flex-direction: column;
+   gap: 50px;
+}
+
+
+/* contact-area */
+
+
+
+.contact-area h3{
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 42px;
+}
+.contact-area p{
+    width: 100%;
+}
+
+.contact-option{
+    grid-template-columns: 1fr;
+    
+}
+
+.contact-address{
+    grid-template-columns: 1fr;
+}
+
+
+
+
+
+
+
+
+
+/* Footer Area CSS */
+
+
+.footer-text p{
+    font-size: 16px;
+}
+
+
 }
 
 
